Fixed the CSS vs set_position fight. CSS won, see ScrollBar_Impl::on_css_property_list(CSSPropertyList &properties)

--- a/Tests/GUI/CSSDocument2/theme.css
+++ b/Tests/GUI/CSSDocument2/theme.css
@@ -537,7 +537,13 @@ scrolltrack_right:disabled
 
 scrollthumb_horizontal
 {
+
+	position: relative;
+
+/* This is set in Scrollbar_Impl
+ 	left: -100px;
 	width: 16px;
+*/
 	height: 16px;
 }
 
